--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@ and open the template in the editor.
 
 <nav class="navbar navbar-expand-lg navbar-light fixed-top">
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <a class="navbar-brand navbar-font " href="mainpage.html" >Allison Adad</a>
+    <a class="navbar-brand navbar-font " href="index.html" >Allison Adad</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
