--- a/about.html
+++ b/about.html
@@ -39,8 +39,8 @@ and open the template in the editor.
       <div class="navbar-nav">
 
         <a class="nav-item nav-link" href="about.html">About</a>
-        <a class="nav-item nav-link" href="photography.html">Photography</a>
-        <a class="nav-item nav-link" href="mainpage.html">Home</a>
+        <a class="nav-item nav-link" href="photography.html">Portfolio</a>
+        <a class="nav-item nav-link" href="index.html">Home</a>
       </div>
     </div>
   </nav>
@@ -54,37 +54,33 @@ and open the template in the editor.
 
     <div class="row ">
       <div class="col-sm-6 col-md-5 col-lg-6 mybio">
-        Allison is an aspiring photographer who is from Woodland Hills, California and currently
-        resides in San Francisco, California. Her interested in photography started at a young age
-        with a Nikon digital camera. From there she mostly began using her iPhone camera, starting
-        from the iPhone 4 and now to the iPhone XS. All her photos are captured using iPhone thus
-        far but she hopes to expand her versatility and eventually learn film photography and begin
-        taking videos.
+        <p>
+          Allison is a third year student at San Francisco State University studying computer science, race & resisitance studies,
+          and photography. Thus far she has focused on landscape photography but hopes to branch out into documentary photography
+          while learning how to merge her passion for visual arts with front-end development.
+        </p>
       </div>
 
 
       <div class="col-12 col-md-8">
-        <img id="me-image" src="../images/me.jpeg" alt="me" class="me-image" >
 
         <div class="col-6 col-md-4 mybio2">
           <p>
-            For further inquiries please contact via
-          <p>
-            Email: adadallison@gmail.com
+           CONTACT –
           </p>
-
           <p>
-            <a href="https://www.instagram.com/adadallison">
-              <ion-icon name="logo-instagram" size="large"></ion-icon>
-            </a>
+            adadallison@gmail.com
           </p>
+          <p>
+            <a class="insta" href="https://www.instagram.com/adadallison" >Instagam</a>
+          <p>
         </div>
       </div>
     </div>
   </div>
 
   <div class="footer">
-    Copyright 2019  &#169 Allison Adad
+    &#169 2020 Allison Adad
   </div>
 
 </div>
