--- a/photography.html
+++ b/photography.html
@@ -15,7 +15,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-  <a class="navbar-brand navbar-font " href="mainpage.html" >Allison Adad</a>
+  <a class="navbar-brand navbar-font " href="index.html" >Allison Adad</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -23,8 +23,8 @@
     <div class="navbar-nav">
 
       <a class="nav-item nav-link" href="about.html">About</a>
-      <a class="nav-item nav-link" href="photography.html">Photography</a>
-      <a class="nav-item nav-link" href="mainpage.html">Home</a>
+      <a class="nav-item nav-link" href="photography.html">Portfolio</a>
+      <a class="nav-item nav-link" href="index.html">Home</a>
     </div>
   </div>
 </nav>
@@ -33,73 +33,61 @@
 
 <div class="bootstrap-container containergallery">
 
-  <div class="grid">
+  <div class="grid responsive-image">
     <div class="cell">
-      <img class="calabasas-image responsive-image" src="../images/calabasas.jpeg" />
+      <img class="calabasas-image " src="../images/oceansaliva.jpeg" />
     </div>
     <div class="cell">
-      <img class="whitemalibudog-image" src="../images/whitemalibudog.jpeg" class="responsive-image" />
+      <img class="whitemalibudog-image" src="../images/tony.jpeg"  />
     </div>
     <div class="cell">
-      <img class="stuntrd-image" src="../images/stuntrd.jpeg" class="responsive-image" />
+      <img class="stuntrd-image" src="../images/squarebalcony.jpeg" />
     </div>
     <div class="cell">
-      <img class="joshuatree-image" src="../images/joshuatreeman.jpeg" class="responsive-image" />
+      <img class="joshuatree-image" src="../images/malibu.png" />
     </div>
     <div class="cell">
-      <img class="cloudmountain-image" src="../images/cloudmountain.jpeg" class="responsive-image" />
+      <img class="cloudmountain-image" src="../images/surferdown.jpeg"  />
     </div>
     <div class="cell">
-      <img class="newyorkpuddle-image" src="../images/newyorkpuddle.jpeg" class="responsive-image" />
+      <img class="newyorkpuddle-image" src="../images/estate.jpeg" />
     </div>
 
     <div class="cell">
-      <img class="morefoliage-image" src="../images/morefoliage.jpeg" class="responsive-image" />
+      <img class="morefoliage-image" src="../images/gabby.jpeg"  />
     </div>
     <div class="cell">
-      <img class="ontheroadjoshua-image" src="../images/ontheroadjoshuatree.jpeg" class="responsive-image" />
+      <img class="ontheroadjoshua-image" src="../images/vanillaflowers.jpeg"  />
     </div>
     <div class="cell">
-      <img class="mulhollandmountain-image" src="../images/mulhollandmountain.jpeg" class="responsive-image" />
+      <img class="mulhollandmountain-image" src="../images/cullen.jpeg"  />
     </div>
     <div class="cell">
-      <img class="vanillaflowers-image" src="../images/vanillaflowers.jpeg" class="responsive-image" />
+      <img class="vanillaflowers-image" src="../images/boliviaflag.jpeg"  />
     </div>
     <div class="cell">
-      <img class="gabby-image" src="../images/gabby.jpeg" class="responsive-image" />
+      <img class="gabby-image" src="../images/nywater.jpg"  />
     </div>
     <div class="cell">
-      <img class="timesquare-image" src="../images/timesquare.jpeg" class="responsive-image" />
+      <img class="timesquare-image" src="../images/stuntrd.jpeg"  />
     </div>
     <div class="cell">
-      <img class="greathighway-image" src="../images/greathighway.jpeg" class="responsive-image" />
+      <img class="greathighway-image" src="../images/cloudheaven.jpeg"  />
     </div>
     <div class="cell">
-      <img class="puddle-image" src="../images/puddle.jpeg" class="responsive-image" />
+      <img class="puddle-image" src="../images/sfcement.jpeg" />
     </div>
     <div class="cell">
-      <img class="branch-image" src="../images/branch.jpeg" class="responsive-image" />
+      <img class="branch-image" src="../images/ripple.png"  />
     </div>
     <div class="cell">
-      <img class="goldengatepark-image" src="../images/goldengatepark.jpeg" class="responsive-image" />
-    </div>
-    <div class="cell">
-      <img class="oceansaliva-image" src="../images/oceansaliva.jpeg" class="responsive-image" />
-    </div>
-    <div class="cell">
-      <img class="shermanoaks-image" src="../images/shermanoaks.jpeg" class="responsive-image" />
-    </div>
-    <div class="cell">
-      <img class="golf-image" src="../images/golf.jpg" class="responsive-image" />
-    </div>
-    <div class="cell">
-      <img class="moon-image" src="../images/moon.jpeg" class="responsive-image" />
+      <img class="goldengatepark-image" src="../images/jeremy.png"  />
     </div>
 
   </div>
 
   <div class="footer">
-    Copyright 2019  &#169 Allison Adad
+    &#169 2020 Allison Adad
   </div>
 
 </div>
