--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ and open the template in the editor.
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="../css/main.css">
 
 </head>
 
@@ -22,7 +22,7 @@ and open the template in the editor.
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-  <a class="navbar-brand navbar-font " href="mainpage.html" >Allison Adad</a>
+  <a class="navbar-brand navbar-font " href="index.html" >Allison Adad</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -30,8 +30,8 @@ and open the template in the editor.
     <div class="navbar-nav">
 
       <a class="nav-item nav-link" href="about.html">About</a>
-      <a class="nav-item nav-link" href="photography.html">Photography</a>
-      <a class="nav-item nav-link" href="mainpage.html">Home</a>
+      <a class="nav-item nav-link" href="photography.html">Portfolio</a>
+      <a class="nav-item nav-link" href="index.html">Home</a>
     </div>
   </div>
 </nav>
@@ -43,12 +43,12 @@ and open the template in the editor.
   <div class="carousel-inner" >
 
     <div class="carousel-item active">
-      <img class="d-block w-100 coolestsunset-image img-fluid" src="../images/coolestsunset.jpeg" alt="First slide">
+      <img class="d-block w-100 coolestsunset-image img-fluid" src="../images/sf.JPG" alt="First slide">
 
     </div>
 
     <div class="carousel-item">
-      <img class="d-block w-100 yellowflower-image img-fluid" src="../images/yellowflower.png" alt="Second slide">
+      <img class="d-block w-100 yellowflower-image img-fluid" src="../images/coolestsunset.jpeg" alt="Second slide">
     </div>
 
     <div class="carousel-item">
@@ -56,15 +56,15 @@ and open the template in the editor.
     </div>
 
     <div class="carousel-item">
-      <img class="d-block w-100 malibucanyon-image img-fluid" src="../images/malibucanyon.png" alt="Fourth slide">
+      <img class="d-block w-100 malibucanyon-image img-fluid" src="../images/branch.jpeg" alt="Fourth slide">
     </div>
 
     <div class="carousel-item">
-      <img class="d-block w-100 paintedsky-image img-fluid" src="../images/paintedsky.jpeg" alt="Fifth slide">
+      <img class="d-block w-100 paintedsky-image img-fluid" src="../images/filmflower.png" alt="Fifth slide">
     </div>
 
     <div class="carousel-item">
-      <img class="d-block oceanbeach-image img-fluid" src="../images/oceanbeach.png" alt="Sixth slide">
+      <img class="d-block oceanbeach-image img-fluid" src="../images/yellowflower.png" alt="Sixth slide">
     </div>
 
     <div class="carousel-item">
@@ -72,7 +72,7 @@ and open the template in the editor.
     </div>
 
     <div class="carousel-item">
-      <img class="d-block foliage-image img-fluid" src="../images/foliage.jpeg" alt="Eigth slide">
+      <img class="d-block foliage-image img-fluid" src="../images/rain.jpeg" alt="Eigth slide">
     </div>
 
   </div>
@@ -86,7 +86,7 @@ and open the template in the editor.
     <span class="sr-only">Next</span>
   </a>
 
-  Copyright 2019 &#169 Allison Adad
+  &#169 2020 Allison Adad
 
 
 </div>
