--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@ and open the template in the editor.
     <div class="row ">
       <div class="col-sm-6 col-md-5 col-lg-6 mybio">
         <p>
-          Allison is a first generation student at San Francisco State University double majoring in Computer Science and Race & Resisitance Studies with
+          Allison is a first generation undergrad at San Francisco State University double majoring in Computer Science and Race & Resisitance Studies with
           a minor in Mathematics. She enjoys film photography and darkroom printing. Thus far she has focused on landscape photography but hopes to branch out 
           into documentary photography and digital photography. With her passion for social justice and technology, she aspires contribute and create meaningful
           technology that impacts the lives of individuals at a micro and mezzo level. 
