--- a/about.html
+++ b/about.html
@@ -57,8 +57,8 @@ and open the template in the editor.
         <p>
           Allison is a first generation undergraduate student at San Francisco State University double majoring in Computer Science and Race & Resisitance Studies 
           with a minor in Mathematics. She enjoys film photography, darkroom printing and iPhone photography. Thus far she has focused on landscape photography but
-          hopes to branch out into documentary photography and digital photography. With her passion for social justice and technology, she aspires contribute and create meaningful
-          technology that impacts the lives of individuals at a micro and mezzo level. 
+          hopes to branch out into documentary photography and digital photography. With her passion for social justice and technology, she aspires contribute and 
+          create meaningful technology that impacts the lives of individuals at a micro and mezzo level. 
         </p>
       </div>
 
