--- a/about.html
+++ b/about.html
@@ -56,9 +56,9 @@ and open the template in the editor.
       <div class="col-sm-6 col-md-5 col-lg-6 mybio">
         <p>
           Allison is a first generation undergraduate student at San Francisco State University double majoring in Computer Science and Race & Resisitance Studies 
-          with a minor in Mathematics. She enjoys film photography, darkroom printing and iPhone photography. Thus far she has focused on landscape photography but
-          hopes to branch out into documentary photography and digital photography. With her passion for social justice and technology, she aspires contribute and 
-          create meaningful technology that impacts the lives of individuals at a micro and mezzo level. 
+          with a minor in Mathematics. She enjoys film photography, darkroom printing and iPhone photography; she hopes to branch out into documentary photography 
+          and digital photography. With her passion for social justice and technology, she aspires contribute and create meaningful technology that impacts the 
+          lives of individuals at a micro and mezzo level. 
         </p>
       </div>
 
@@ -70,7 +70,7 @@ and open the template in the editor.
            CONTACT –
           </p>
           <p>
-            adadallison@gmail.com
+            <a href="www.linkedin.com/in/adadallison" >LinkedIn</a>
           </p>
           <p>
             <a class="insta" href="https://www.instagram.com/adadallison" >Instagam</a>
