--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@ and open the template in the editor.
            CONTACT –
           </p>
           <p>
-            <a href="www.linkedin.com/in/adadallison" >LinkedIn</a>
+            <a class="insta" href="www.linkedin.com/in/adadallison" >LinkedIn</a>
           </p>
           <p>
             <a class="insta" href="https://www.instagram.com/adadallison" >Instagam</a>
