--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@ and open the template in the editor.
           Allison is a first generation undergraduate student at San Francisco State University double majoring in Computer Science and Race & Resisitance Studies 
           with a minor in Mathematics. She enjoys film photography, darkroom printing and iPhone photography; she hopes to branch out into documentary photography 
           and digital photography. With her passion for social justice and technology, she aspires contribute and create meaningful technology that impacts the 
-          lives of individuals at a micro and mezzo level. 
+          lives of individuals at a micro and macro level. 
         </p>
       </div>
 
