--- a/about.html
+++ b/about.html
@@ -55,10 +55,10 @@ and open the template in the editor.
     <div class="row ">
       <div class="col-sm-6 col-md-5 col-lg-6 mybio">
         <p>
-          Allison is a first generation undergraduate student at San Francisco State University double majoring in Computer Science and Race & Resisitance Studies 
-          with a minor in Mathematics. She enjoys film photography, darkroom printing and iPhone photography; she hopes to branch out into documentary photography 
-          and digital photography. With her passion for social justice and technology, she aspires contribute and create meaningful technology that impacts the 
-          lives of individuals at a micro and macro level. 
+          Allison is a first generation SFSU graduate who double majored in Computer Science and Race and Resistance Studies, as well as minored in 
+          Mathematics. She enjoys merging her passion for technology and visual design through front-end development. She aspires contribute and create
+          meaningful technology that impacts the lives of individuals at a micro and macro level. She enjoys film photography, darkroom printing 
+          and iPhone photography.
         </p>
       </div>
 
